# FCSS_STORE

./: .env  .env.example  .gitignore  Cargo.toml  cargo.toml  schema.sql  setup_db.sh  setup_db.sql  sqlx-data.json
.cargo/: config.toml
data/: secure_store.db
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.node.json  update-api-urls.sh  vite.config.js
frontend/public/: config.js  config.template.js  index.html
frontend/src/: App.svelte  OrderConfirmation.svelte  ambient.d.ts  api.js  app.css  app.svelte  check-cart-imports.js  checkout.js  config.js  routes.js  svelte.d.ts
frontend/src/components/: AdminOrders.svelte  AdminPanel.svelte  AdminProducts.svelte  AdminUsers.svelte  Cart.svelte  CartDrawer.svelte  CartIcon.svelte  Chat.svelte  ConfigTester.svelte  Home.svelte  Login.svelte  MoneroAdmin.svelte  MoneroCheckout.svelte  MoneroTransactions.svelte  Nav.svelte  NavBar.svelte  OrderStatus.svelte  (+10 more)
migrations/: 20230101000000_test.sql  20230101000001_create_users.sql  20230101000002_create_products.sql  20230101000003_create_orders.sql  20230101000004_create_transactions.sql  create_addresses_table.sql  update_order_items.sql
monero-x86_64-linux-gnu-v0.18.3.4/: start-wallet-rpc.sh
src/: .env  admin.rs  auth.rs  auto_purge.rs  cart.rs  chat.rs  config.rs  create_db.rs  db.rs  db_reset.rs  lib.rs  main.rs  middleware.rs  monero.rs  monero_admin.rs  monero_api.rs  monero_health.rs  monero_wallet.rs  orders.rs  payment.rs  payment_websocket.rs  products.rs  session.rs  setup_db.rs  types.rs  users.rs
(+11 files in other folders)
